# pynsee

./: .gitignore  pyproject.toml
.github/workflows/: gallery.yml  pkgTests.yml
pynsee/: __init__.py
pynsee/localdata/: _get_geo_list_simple.py  get_area_list.py  get_ascending_area.py  get_descending_area.py  get_geo_list.py  get_population.py
pynsee/metadata/: get_definition.py
pynsee/sirene/: get_sirene_relatives.py
tests/: conftest.py  mockups.py
tests/download/: test_pynsee_download.py
tests/geodata/: test_pynsee_geodata.py
tests/localdata/: test_pynsee_localdata.py
tests/macrodata/: test_pynsee_macrodata.py
tests/metadata/: test_pynsee_metadata.py
tests/sirene/: test_pynsee_sirene.py
tests/utils/: test_pynsee_utils.py
