[tool.poetry]
name = "dummy"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
packages = [{include = "pynsee"}]

[tool.poetry.dependencies]
python = "^3.9"
spyder = "^5.4.3"
pandas = "^2.0.3"
tqdm = "^4.65.0"
requests = "^2.28.2"
appdirs = "^1.4.4"
unidecode = "^1.3.6"
urllib3 = "^1.26.15"
shapely = "<2.0"
openpyxl = "<=3.1.0"
xlrd = "^2.0.1"
geopandas = "^0.13.2"


[tool.poetry.group.dev.dependencies]
spyder = "^5.4.3"
pytest = "^7.4.0"
python-dotenv = "^1.0.0"
requests-cache = "^1.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
